{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 8,
  "lineage": "a56f1024-0a31-1f7e-e65e-4e4d2b897398",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "all-in-one-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08f0737412a47a5ed",
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:instance/i-01945f9630d390a33",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01945f9630d390a33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Kissme",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-047c3938cddf461ce"
              }
            ],
            "primary_network_interface_id": "eni-047c3938cddf461ce",
            "private_dns": "ip-10-0-1-29.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_dns": "ec2-54-250-74-189.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.250.74.189",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07cf1856ea4074ebc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03afc53686bfd386f",
            "tags": {
              "Name": "all-in-one-ec2"
            },
            "tags_all": {
              "Name": "all-in-one-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0913e4d56a7a75ecc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "i-01945f9630d390a33",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.all-in-one-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:internet-gateway/igw-05e66d863778f372a",
            "id": "igw-05e66d863778f372a",
            "owner_id": "064255164072",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "all-in-one-igw"
            },
            "tags_all": {
              "Name": "all-in-one-igw"
            },
            "vpc_id": "vpc-07f9c7f11dcac55f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:route-table/rtb-0e135e2b731d8fc9e",
            "id": "rtb-0e135e2b731d8fc9e",
            "owner_id": "064255164072",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e66d863778f372a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "all-in-one-public-rt"
            },
            "tags_all": {
              "Name": "all-in-one-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f9c7f11dcac55f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "rtb-0e135e2b731d8fc9e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "all-in-one-public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a8731d3f3d1bff0",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0e135e2b731d8fc9e",
            "subnet_id": "subnet-03afc53686bfd386f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all-in-one-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:security-group/sg-0913e4d56a7a75ecc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ALL Outbound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0913e4d56a7a75ecc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ALL Inbound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "all-in-one-sg",
            "name_prefix": "",
            "owner_id": "064255164072",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "all-in-one-sg"
            },
            "tags_all": {
              "Name": "all-in-one-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f9c7f11dcac55f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "sg-0913e4d56a7a75ecc",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:subnet/subnet-03afc53686bfd386f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03afc53686bfd386f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064255164072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "all-in-one-public-subnet"
            },
            "tags_all": {
              "Name": "all-in-one-public-subnet"
            },
            "vpc_id": "vpc-07f9c7f11dcac55f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064255164072",
            "id": "subnet-03afc53686bfd386f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:064255164072:vpc/vpc-07f9c7f11dcac55f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d87e6edfcae94c2",
            "default_route_table_id": "rtb-03dcc9147fc942e56",
            "default_security_group_id": "sg-0a710e44c5c08d475",
            "dhcp_options_id": "dopt-0cb84f2cec8942e88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f9c7f11dcac55f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03dcc9147fc942e56",
            "owner_id": "064255164072",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "all-in-one-vpc"
            },
            "tags_all": {
              "Name": "all-in-one-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}